
package bfs;

message FileInfo {
    optional int64 id = 1;
    optional int64 version = 2;
    optional int32 type = 3 [default = 0755];
    repeated int64 blocks = 4;
    optional uint32 ctime = 5;
    optional string name = 6;
    optional int64 size = 7;
    optional int32 replicas = 8;
}

message ChunkServerInfo {
    optional int32 id = 1;
    optional string address = 2;
    optional int32 last_heartbeat = 3;
    optional int64 data_size = 4;
    optional int64 disk_size = 6;
    optional int32 block_num = 7;
}

